--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ cache:
 
 script: "./gradlew clean build"
 
+before_install:
+  - chomod +x gradlew
+
+
+
 # CI 실행 완료시 메일로 알람
 notifications:
   email:
