--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,21 @@ cache:
 
 script: "./gradlew clean build"
 
+before_deploy:
+  - zip -r yjeom-springboot-test
+  - mkdir -p deploy
+  - mv yjeom-springboot-test.zip deploy/yjeom-springboot-test.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY #Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: yjeom-springboot-build #s3 버킷
+    region: ap-northeast-a
+    skip_cleanup: true
+    acl: private # zip 파일 접근을 private로
+    local_dir: deploy #before_deploy에서 생성한 디렉토리
+    wait-until-deployed: true
 
 
 
@@ -26,4 +41,4 @@ script: "./gradlew clean build"
 notifications:
   email:
     recipients:
-      - eomyj0920@gmail.com
+      - myMailAddress
