--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r yjeom-springboot-test
+  - zip -r springboot
   - mkdir -p deploy
-  - mv yjeom-springboot-test.zip deploy/yjeom-springboot-test.zip
+  - mv springboot.zip deploy/springboot.zip
 
 deploy:
   - provider: s3
