--- a/.travis.yml
+++ b/.travis.yml
@@ -25,13 +25,24 @@ before_deploy:
 
 deploy:
   - provider: s3
-    access_key_id: $AWS_ACCESS_KEY #Travis repo settings에 설정된 값
+      access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+      secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+      bucket: yjeom-springboot-build # S3 버킷
+      region: ap-northeast-2
+      skip_cleanup: true
+      acl: private # zip 파일 접근을 private으로
+      local_dir: deploy # before_deploy에서 생성한 디렉토리
+      wait-until-deployed: true
+
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
     secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
-    bucket: yjeom-springboot-build #s3 버킷
-    region: ap-northeast-a
-    skip_cleanup: true
-    acl: private # zip 파일 접근을 private로
-    local_dir: deploy #before_deploy에서 생성한 디렉토리
+    bucket: yjeom-springboot-build # S3 버킷
+    key: yjeom-springboot-test.zip # 빌드 파일을 압축해서 전달
+    bundle_type: zip
+    application: yjeom-springboot-test # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
+    deployment_group: yjeom-springboot-test-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
+    region: ap-northeast-2
     wait-until-deployed: true
 
 
