--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,14 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r yjeom-springboot-test *
-  - mkdir -p deploy
-  - mv yjeom-springboot-test.zip deploy/yjeom-springboot-test.zip
+  - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성
+    - cp scripts/*.sh before-deploy/
+    - cp appspec.yml before-deploy/
+    - cp build/libs/*.jar before-deploy/
+    - cd before-deploy && zip -r before-deploy * # before-deploy로 이동후 전체 압축
+    - cd ../ && mkdir -p deploy # 상위 디렉토리로 이동후 deploy 디렉토리 생성
+    - mv before-deploy/before-deploy.zip deploy/yjeom-springboot-test.zip # deploy로 zip파일 이동
+
 
 
 deploy:
@@ -45,8 +50,6 @@ deploy:
     deployment_group: yjeom-springboot-test-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
     region: ap-northeast-2
     wait-until-deployed: true
-
-
 
 
 # CI 실행 완료시 메일로 알람
