--- a/appspec.yml
+++ b/appspec.yml
@@ -4,3 +4,14 @@ files:
   - source:  /
     destination: /home/ec2-user/app/step3/zip/
     overwrite: yes
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+
+hooks:
+  AfterInstall:
+    - location: deploy.sh
+      timeout: 60
+      runas: ec2-user
